--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Derek Fuenning - Developer</title>
+    <title>Derek Fuenning - Testing</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -20,29 +20,27 @@
 </head>
 
 <body>
-
-
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="spy">
+    <nav class="navbar navbar-expand-lg navbar-light" id="spy">
         <div class="container">
             <button class="navbar-toggler-icon" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="col-md-12 collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link text-black" id="largeText" href="index.html">Home
+                        <a class="nav-link text-white" id="largeText" href="index.html">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" id="largeText" href="#aboutMe">About Me</a>
+                        <a class="nav-link text-white" id="largeText" href="#aboutMe">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" id="largeText" href="#portfolio">Portfolio</a>
+                        <a class="nav-link text-white" id="largeText" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" id="largeText" href="contact.html">Contact Me</a>
+                        <a class="nav-link text-white" id="largeText" href="contact.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -50,44 +48,41 @@
     </nav>
 
     <header class="masthead">
-        <div class="container h-100">
-            <!-- <div class="build">
-                <h2 class="eigth">TDD</h2>
-                <h2 class="seventh">SQL</h2>
-                <h2 class="sixth">Node.js</h2>
-                <h2 class="fifth">jQuery</h2>
-                <h2 class="fourth">JavaScript</h2>
-                <h2 class="third">CSS</h2>
-                <h2 class="second">Bootstrap</h2>
-                <h2 class="first">HTML</h2>
-            </div> -->
+        <div class="container-fluid h-100">
 
+            <div class="row h-100" id="fullHeight">
 
+                <div class="col-6 h-100 text-start" id="highlight">
+                    <h1>Hi,</h1>
+                    <br>
+                    <h1>I'm <span class="name">Derek</span></h1>
+                    <br>
+                    <h1>Full Stack Developer</h1>
+                    <div id="madeWith">
+                        <p>Made with:</p>
+                        <p>Bootstrap | CSS | JavaScript</p>
+                    </div>
+                    <div id="contactBtn">
+                        <a href="#contact">contact me</a>
+                        <!-- <img src="./images/portfolio/headshot.png" alt="headshot" class="headshot" style="height: 400px; width: 500px;"> -->
 
-
-
-            <div class="row h-100 align-items-center">
-                <div class="col-12 text-center">
-                    <h1 id="largeHeader" class="font-weight-light text-white">Derek<span class="enhance">
-                            Fuenning</span>
-                    </h1>
-                    <p id="largerText" class="lead text-white" style="text-transform: uppercase;">Lets Build Something,
-                        Together </p>
-                    <div class="button_cont" text-align="center"><a class="buttonmorph" href="#gallery" target="_blank"
-                            rel="nofollow noopener">My Porftolio</a></div>
+                    </div>
+                </div>
+                <div class="col-md-6" id="headshot">
+                    <img src="./images/portfolio/headshot.png" alt="headshot" class="headshot"
+                        style="padding: -200px 0 200px 700px;">
                 </div>
             </div>
         </div>
+
+
     </header>
     <div class="wrapper">
-        <!-- Page Content -->
-        <!-- <section class="py-5" id="icons-sect">
-            
-        </section> -->
-        <header id="personal" class="bio">
+
+        <section id="personal" class="bio">
             <div class="flex-container w-container">
                 <div class="row" id="left">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <h2 class="mb-5">Full Stack <span class="enhance">Developer</span></h2>
                         <p id="largeText">I am a full stack developer in training at <strong>Case Western Reserve
                                 University.</strong>
@@ -95,18 +90,16 @@
                             a developer!<br> <br>I hope that you enjoy my
                             page!<br><br> Please contact me with any business inquiries, guidance in the coding world,
                             or if you happen to have an awesome fish taco recipe.</p>
-                        <!-- <a href="/images/portfolio/Resume.pdf" download="Resume.pdf">My Resume</a> -->
-                        <!-- <img id="resume" src="/images/portfolio/resumeimg.png" alt="My Resume">
-                            </a> -->
-                        <button type="button" class="btn btn-success"><a id="btnBio" href="contact.html">Contact
-                                Me!</a></button>
                     </div>
-                    <div class="col-md-3">
-                        <div class="hero-image-mask"><img src="images/portfolio/newnew.jpg" alt="profile-pic"
-                                class="hero-image"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="button_cont" text-align="center"><a class="buttonmorph" href="#gallery"
+                                target="_blank" rel="nofollow noopener">Contact Me</a></div>
                     </div>
                 </div>
             </div>
+
             <div class="container center mt-5">
                 <i id="icons" class="fab fa-html5 fa-4x"></i>
                 <i id="icons" class="fab fa-css3-alt fa-4x"></i>
@@ -118,7 +111,7 @@
                 <i id="icons" class="fab fa-github fa-4x"></i>
                 <i id="icons" class="fab fa-bootstrap fa-4x"></i>
             </div>
-        </header>
+        </section>
         <div id="height" class="container">
             <div class="row">
                 <div id="bottom-border" class="col-md-2 justify-content-center">
@@ -140,16 +133,18 @@
                 <figure id="border" class="gallery__item gallery__item--1">
                     <img src="images/portfolio/original.PNG" alt="Gallery image 1" class="gallery__img">
                     <div class="overlay">
-                        <div class="text">
-                            <h3>Under Construction!</h3> Click on another image.
+                        <div id="text">
+                            <h3>Under Construction!</h3>
+                            <!-- <p>Click on another image.</p> -->
                         </div>
                     </div>
                 </figure>
                 <figure id="border" class="gallery__item gallery__item--2">
-                    <img src="images/portfolio/layoutimg.jpg" alt="Gallery image 2" class="gallery__img">
+                    <img src="images/portfolio/eatdaburger.PNG" alt="Gallery image 2" class="gallery__img">
                     <div class="overlay">
-                        <div class="text">
-                            <h3>Under Construction</h3>Click on another image.
+                        <div id="text">
+                            <h3>Burger Creation App</h3>
+                            <!-- <p>Create a burger, and devour it! Using MySQL</p> -->
                         </div>
                     </div>
                 </figure>
@@ -157,8 +152,9 @@
                     <img src="images/portfolio/Capture.PNG" alt="Gallery image 3" class="gallery__img">
                     <div class="overlayOne">
                         <div class="textOne">
-                            <h1>Beer Here!</h1> A site created to locate breweries around the US based on the users
-                            chosen location. <br> Drink Up!
+                            <h1>Brewery Finder App</h1>
+                            <!-- <p> A site created to locate breweries around the US based on the users
+                                chosen location. <br> Drink Up! </p> -->
                         </div>
                     </div>
                 </figure>
@@ -166,8 +162,9 @@
                     <img src="images/portfolio/weather.png" alt="Gallery image 4" class="gallery__img">
                     <div class="overlayTwo">
                         <div class="textTwo">
-                            <h1>Weather Dashboard App</h1>Using OpenWeatherAPI to get the current forecast of your
-                            chosen city.
+                            <h1>Weather Dashboard App</h1>
+                            <!-- <p> OpenWeatherAPI to get the current forecast of your
+                                chosen city.</p> -->
                         </div>
                     </div>
 
@@ -176,7 +173,8 @@
                     <img src="images/portfolio/planner.PNG" alt="Gallery image 5" class="gallery__img">
                     <div class="overlayThree">
                         <div class="textThree">
-                            <h1>Daily Planner App</h1>Helping you schedule out your entire day and stay on track!
+                            <h1>Daily Planner App</h1>
+                            <!-- <p>Helping you schedule out your entire day and stay on track!</p> -->
                         </div>
                     </div>
 
@@ -185,8 +183,9 @@
                     <img src="images/portfolio/workingGIF.gif" alt="Gallery image 6" class="gallery__img">
                     <div class="overlayFour">
                         <div class="textFour">
-                            <h1>README Generator</h1>Using Node and Axios, to create a dynamic README document to attach
-                            to your repositories.
+                            <h1>README Generator</h1>
+                            <!-- <p>Using Node and Axios, to create a dynamic README document to attach
+                                to your repositories.</p> -->
                         </div>
                     </div>
 
@@ -281,4 +280,4 @@
     </script>
 </body>
 
-</html>
+</html>s
