--- a/contact.html
+++ b/contact.html
@@ -29,18 +29,18 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link text-black" id="largeText" href="index.html">Home
+                        <a class="nav-link text-white" id="largeText" href="index.html">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" id="largeText" href="#aboutMe">About Me</a>
+                        <a class="nav-link text-white" id="largeText" href="#aboutMe">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" id="largeText" href="#portfolio">Portfolio</a>
+                        <a class="nav-link text-white" id="largeText" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" id="largeText" href="contact.html">Hire Me</a>
+                        <a class="nav-link text-white" id="largeText" href="contact.html">Hire Me</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
                             as possible so I know how I can best help you. Thanks!</p>
 
                         <!-- We're going to place the form here in the next step -->
-                        <form id="contact-form" method="post" action="contact.php" role="form">
+                        <form id="contact-form" method="post" action="mailto:DFuenning@gmail.com" role="form">
 
                             <div class="messages"></div>
 
